# tauri-plugin-use-ffmpeg

./: Cargo.toml  LICENSE  README.md  build.rs  package.json  pnpm-lock.yaml
.github/workflows/: ci.yml  release.yml
examples/tauri-app/: README.md  package.json  pnpm-lock.yaml
examples/tauri-app/src/: App.tsx  style.css
examples/tauri-app/src-tauri/: Cargo.toml
examples/tauri-app/src-tauri/capabilities/: default.json
examples/tauri-app/src-tauri/src/: lib.rs
examples/tauri-app/src/components/: FFmpegDemo.css  FFmpegDemo.tsx
guest-js/: index.ts
permissions/: default.toml
permissions/autogenerated/: reference.md
permissions/schemas/: schema.json
scripts/: bump-version.sh
src/: commands.rs  desktop.rs  error.rs  lib.rs  models.rs
