[package]
name = "tauri-app"
version = "0.1.0"
description = "A Tauri App"
authors = ["lin52025i"]
license = ""
repository = ""
edition = "2021"
rust-version = "1.77.2"

[lib]
name = "tauri_app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "2.5.1", default-features = false , features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-use-ffmpeg = { path = "../../.." }
tauri-plugin-dialog = "2"

